gitlab/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: "ca-clusterissuer"
    cert-manager.io/common-name: "gitlab.k8s.kld.cn"
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - gitlab.k8s.kld.cn
    secretName: gitlab-tls-secret
  rules:
  - host: gitlab.k8s.kld.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-service
            port:
              number: 80
